--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Executar node index.js
+      - name: Executar script Python
         env:
           URL: ${{ secrets.URL }}
           WALLET: ${{ secrets.WALLET }}
