--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: ["main"]
   schedule:
-    - cron: "*/15 * * * *" # Executa a cada X horas
+    - cron: "*/15 * * * *" # Executa a cada 15 minutos
 
 jobs:
   build:
@@ -24,7 +24,7 @@ jobs:
       - name: Instalar dependências do Python
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Executar script Python
         env:
