--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -34,6 +34,7 @@ jobs:
           TOKEN2: ${{ secrets.TOKEN2 }}
           TOKEN3: ${{ secrets.TOKEN3 }}
           TOKEN4: ${{ secrets.TOKEN4 }}
+          TOKEN5: ${{ secrets.TOKEN5 }}
         run: python app.py
         
       - name: Fazer upload da captura de tela
