Atualiza a programação do cron para executar a cada 4 horas no workflow Python

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: ["main"]
   schedule:
-    - cron: "*/15 * * * *" # Executa a cada 15 minutos
+    - cron: "0 */4 * * *" # Executa a cada 4 horas
 
 jobs:
   build:
