--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -43,9 +43,7 @@ jobs:
         run: |
           python app.py || echo "⚠️ app.py falhou"
           echo ""
-          echo "###############################"
-          echo "###        Outro app        ###"
-          echo "###############################"
+          echo "========== Outro app =========="
           echo ""
           python app2.py
         
