--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,7 +6,8 @@ on:
   pull_request:
     branches: ["main"]
   schedule:
-    - cron: "0 */2 * * *" # Executa a cada 4 horas
+    - cron: "0 * * * *" # Executa a cada hora
+  workflow_dispatch:
 
 jobs:
   build:
